[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Sparse Merkle Tree"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "sparse-merkle-tree"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/sparse-merkle-tree"
version     = "0.2.0"

[dependencies]
# crates.io
log         = { version = "0.4" }
tiny-keccak = { version = "2.0", optional = true }

[dev-dependencies]
pretty_env_logger = { version = "0.4" }

[features]
debug  = []
keccak = ["tiny-keccak/keccak"]
