[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Sparse Merkle Tree"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "tiny-sparse-merkle-tree"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/tiny-sparse-merkle-tree"
version     = "0.4.0"

[dependencies]
# crates.io
log         = { version = "0.4" }
tiny-keccak = { version = "2.0", optional = true }

[dev-dependencies]
array-bytes       = { version = "1.4" }
pretty_env_logger = { version = "0.4" }

[features]
debug  = []
keccak = ["tiny-keccak/keccak"]
